--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 Projet de calcul stochastique M2
             </button>
         </a> <br> <br>
-        <a href="https://github.com/tguigue30/DU_Python" style="text-decoration: none;" target = "Projet de calcul stochastique">
+        <a href="./PEA.pdf" style="text-decoration: none;" target = "Projet de calcul stochastique">
             <button id="coursButton" style="padding: 10px 20px; font-size: 16px; background-color: red; color: white; border: none; border-radius: 5px; cursor: pointer;">
-                Projet data du DU BigData 
+                Projet d'économétrie appliquée
             </button>
         </a> 
         <p>Faculté d'économie, Université de Montpellier</p>
