Mise à jour de la page index.html et script.js avec les modifications récentes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </button>
         </a> <br> <br>
         <a href="./PEA.pdf" style="text-decoration: none;" target = "Projet de calcul stochastique">
-            <button id="coursButton" style="padding: 10px 20px; font-size: 16px; background-color: red; color: white; border: none; border-radius: 5px; cursor: pointer;">
+            <button id="PEAButton" style="padding: 10px 20px; font-size: 16px; background-color: red; color: white; border: none; border-radius: 5px; cursor: pointer;">
                 Projet d'économétrie appliquée
             </button>
         </a> 
