--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
                 Repository GitHub du DU BigData
             </button>
         </a> <br> <br>
-        <a href="./GUIGUE-GAYRAUD-CALCULSTOCHASTIQUE.html" style="text-decoration: none;" target = "Projet de calcul stochastique">
-            <button id="coursButton" style="padding: 10px 20px; font-size: 16px; background-color: teal; color: white; border: none; border-radius: 5px; cursor: pointer;">
-                Projet de calcul stochastique M2
-            </button>
-        </a> <br> <br>
+        <!-- Suppression du bouton "Projet de calcul stochastique M2" -->
         <p>Faculté d'économie, Université de Montpellier</p>
         <a href="https://economie.edu.umontpellier.fr">
             <img id="logoImage" src="./images_du_site/um_logo.png" alt="Description de l'image" style="max-width: 70%; height: auto; margin-top: 20px;">
